--- a/templates/thread/index.html.twig
+++ b/templates/thread/index.html.twig
@@ -133,7 +133,7 @@
 						'<strong class="username">{pseudo}</strong>' +
 						'<span class="fullname"> {firstName} {lastName}</span>' +
 						'</li>',
-				outputTemplate: '<a href="/user/{pseudo}">@{pseudo}</a><span>&nbsp;</span>',
+				outputTemplate: '<a href="/user/{pseudo}" id="mentionId{id}mentionId">@{pseudo}</a><span>&nbsp;</span>',
 				minChars: 0
 			}
 			]
