--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,3 +1,18 @@
+body::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, .3);
+  border-radius: 10px;
+  background-color: #eee
+}
+body::-webkit-scrollbar {
+  width: 12px;
+  background-color: #2B2B2B
+}
+body::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, .3);
+  background-color: #2B2B2B
+}
+
 div.container {
   margin-top: 20px;
 }
