--- a/templates/partials/header.html.twig
+++ b/templates/partials/header.html.twig
@@ -59,6 +59,7 @@
 					<div class="dropdown-menu dropdown-menu-right">
 						<a href="{{ path('account_index') }}" class="dropdown-item">Mon compte</a>
 						<a href="{{ path('manage_souscription') }}" class="dropdown-item">Mes abonnements</a>
+						<a href="{{ path('account_payments') }}" class="dropdown-item">Mes paiements</a>
 						<div class="dropdown-divider"></div>
 						<a href="{{ path('account_logout') }}" class="dropdown-item">Déconnexion</a>
 					</div>
