--- a/templates/account/index.html.twig
+++ b/templates/account/index.html.twig
@@ -50,6 +50,13 @@
                         <a href="{{ path('manage_souscription') }}"><i class="fas fa-cogs fa-4x primary-color"></i></a>
                     </div>
                 </div>
+                <div class="card border-primary mb-3 ml-3 mr-3 col-4" style="max-width: 20rem;">
+                    <div class="card-body text-center">
+                        <a href="{{ path('account_payments') }}" class="btn btn-primary mr-2 mb-2">Voir mes paiements</a>
+                        <br><br>
+                        <a href="{{ path('account_payments') }}"><i class="fas fa-file-invoice fa-4x primary-color"></i></a>
+                    </div>
+                </div>
             </div>
         {% endif %}
     </div>
