--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -25,8 +25,33 @@
             </div>
         </div>
         <div class="col-12 m-3">
-            <a href="#" class="btn btn-info">Suivre</a>
+            <a href="{{ path('user_follow', {'pseudo': user.pseudo}) }}" class="btn {% if isFollowed %} btn-danger {% else %} btn-info {% endif %}trigger-follow">
+                {% if isFollowed %}
+                    Ne plus suivre
+                {% else %}
+                    Suivre
+                {% endif %}
+            </a>
             <a href="#" class="btn btn-info">Envoyer mp</a>
         </div>
     </div>
+{% endblock %}
+
+{% block javascripts %}
+    <script src="https://unpkg.com/axios@0.19.2/dist/axios.min.js"></script>
+    <script type="text/javascript">
+        $('.trigger-follow').click(function (event) {
+            event.preventDefault();
+            const url = this.href;
+            axios.get(url).then(function () {
+                if($('.trigger-follow').hasClass('btn-danger')){
+                    $('.trigger-follow').removeClass('btn-danger').addClass('btn-info');
+                    $('.trigger-follow').text("Suivre");
+                }else{
+                    $('.trigger-follow').removeClass('btn-info').addClass('btn-danger   ');
+                    $('.trigger-follow').text("Ne plus suivre");
+                }
+            });
+        });
+    </script>
 {% endblock %}
