--- a/templates/partials/header.html.twig
+++ b/templates/partials/header.html.twig
@@ -45,6 +45,8 @@
                     'App\\Controller\\PagesController::getNotifs'
                 	))
                 }}
+				{{ render(controller('App\\Controller\\PagesController:getMessagesUnread')) }}
+
 				<li class="nav-item dropdown">
 					<a class="nav-link dropdown-toggle" href="#">
 						{% if app.user.media %}
