Creation bdd formation

--- a/templates/admin/partials/sidebar.html.twig
+++ b/templates/admin/partials/sidebar.html.twig
@@ -60,7 +60,7 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="{{ path('homepage') }}" class="nav-link">
+                    <a href="{{ path('admin_formation_index') }}" class="nav-link">
                         <i class="nav-icon fas fa-graduation-cap"></i>
                         <p>
                             Formations
