--- a/templates/partials/header.html.twig
+++ b/templates/partials/header.html.twig
@@ -8,6 +8,11 @@
 			<li class="nav-item">
 				<a class="nav-link" href="{{ path('homepage') }}">Accueil</a>
 			</li>
+			{% if app.user != null and app.user.payments | length > 0 %}
+				<li class="nav-item">
+					<a class="nav-link" href="{{ path('formation_index') }}">Formations</a>
+				</li>
+			{% endif %}
 			<li class="nav-item dropdown">
 				<a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown">Discussions</a>
 				<ul class="dropdown-menu dropdown-menu-center">
