--- a/templates/admin/formation/edit.html.twig
+++ b/templates/admin/formation/edit.html.twig
@@ -21,11 +21,18 @@
             </div>
         </div>
         <div class="content">
-            <div class="container-fluid">
-                {{form_start(form)}}
-                {{form_widget(form)}}
-                <button type="submit" class="btn btn-primary">Enregistrer les modifications <i class="fas fa-check"></i></button>
-                {{form_end(form)}}
+            <div class="container">
+                <div class="card card-secondary">
+                    <div class="card-header">
+                        <h3 class="card-title">Édition de la formation <strong>{{ formation.title }}</strong></h3>
+                    </div>
+                    <div class="m-3">
+                        {{form_start(form)}}
+                        {{form_widget(form)}}
+                        <button type="submit" class="btn btn-primary">Enregistrer les modifications <i class="fas fa-check"></i></button>
+                        {{form_end(form)}}
+                    </div>
+                </div>
             </div>
         </div>
     </div>
