--- a/templates/admin/formation/section/create.html.twig
+++ b/templates/admin/formation/section/create.html.twig
@@ -1,6 +1,6 @@
 {% extends 'admin/base.html.twig' %}
 
-{% block title %}Admin Creation Formations{% endblock %}
+{% block title %}Admin Creation Section Formation{% endblock %}
 
 {% block body %}
     <div class="content-wrapper">
@@ -8,12 +8,13 @@
             <div class="container-fluid">
                 <div class="row mb-2">
                     <div class="col-sm-6">
-                        <h1 class="m-0 text-dark">Gestion des formations</h1>
+                        <h1 class="m-0 text-dark">Gestion de la formation <strong>{{ formation.title }}</strong></h1>
                     </div>
                     <div class="col-sm-6">
                         <ol class="breadcrumb float-sm-right">
                             <li class="breadcrumb-item"><a href="{{ path('admin_dashboard') }}">Accueil</a></li>
                             <li class="breadcrumb-item active"><a href="{{ path('admin_formation_index') }}">Formations</a></li>
+                            <li class="breadcrumb-item active"><a href="{{ path('admin_formation_section_index', {'id' : formation.id}) }}">Sections</a></li>
                             <li class="breadcrumb-item active">Création</li>
                         </ol>
                     </div>
