Edition + creation des etapes de sections de formations

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -131,3 +131,8 @@ li.dropdown:hover > .dropdown-menu {
 .text-no-color{
   color: #333;
 }
+
+.admin-alert{
+  margin-left: 250px;
+  background: #f4f6f9;
+}
