--- a/templates/admin/formation/index.html.twig
+++ b/templates/admin/formation/index.html.twig
@@ -38,15 +38,22 @@
                             <h2 class="card-title">{{ formation.title }}</h2>
                             <div class="card-tools">
                                 <a class="ml-1 mr-1" href="{{ path('admin_formation_edit', {'id' : formation.id}) }}"><i class="fa fa-edit"></i> Éditer formation</a>
-                                <a class="ml-1 mr-1" href="{{ path('admin_formation_section_index', {'id' : formation.id}) }}"><i class="fas fa-plus-circle"></i> Sections</a>
+                                <a class="ml-1 mr-1" href="{{ path('admin_formation_section_index', {'id' : formation.id}) }}"><i class="fas fa-edit"></i> Sections</a>
                                 <a class="ml-1 mr-1" href="{{ path('formation_index') }}" target="_blank"><i class="fas fa-eye"></i> Aperçu</a>
+                                <a class="ml-1 mr-1 text-danger"
+                                   href="{{ path('admin_formation_delete', {'id' : formation.id}) }}"
+                                   onclick="return confirm('Êtes-vous sûr de vouloir supprimer cette formation ? Attention : Cela supprimera tout contenu lié à cette formation')">
+                                    <i class="fas fa-trash"></i> Supprimer
+                                </a>
                                 <button type="button" class="btn btn-tool" data-card-widget="collapse" data-toggle="tooltip" title="Réduire">
                                     <i class="fas fa-minus"></i></button>
                             </div>
                         </div>
                         <div class="card-body">
                             {{ formation.description | raw}}
-                            <img src="{{ vich_uploader_asset(formation.media, 'imageFile', 'App\\Entity\\Media') }}" class="img-thumbnail" alt="{{ formation.media.imageName }}">
+                            {% if formation.media %}
+                                <img src="{{ vich_uploader_asset(formation.media, 'imageFile', 'App\\Entity\\Media') }}" class="img-thumbnail" alt="{{ formation.media.imageName }}">
+                            {% endif %}
                         </div>
                     </div>
                 {% endfor %}
