--- a/templates/admin/formation/section/index.html.twig
+++ b/templates/admin/formation/section/index.html.twig
@@ -71,24 +71,40 @@
                                                         </a>
                                                     </div>
                                                 {% else %}
+                                                    <table class="table table-striped table-hover etape-sortable-table">
+                                                        <thead>
+                                                            <tr>
+                                                                <td></td>
+                                                                <td></td>
+                                                                <td></td>
+                                                                <td></td>
+                                                            </tr>
+                                                        </thead>
+                                                        <tbody>
                                                     {% for etape in etapes %}
                                                         {% if etape.section.id == section.id %}
-                                                            <div class="card">
-                                                                <div class="card-header">
+                                                            <tr data-index="{{ etape.id }}" data-position="{{ etape.position }}">
+                                                                <td>
                                                                     <h2 class="card-title">{{ etape.title }}</h2>
-                                                                    <div class="card-tools">
-                                                                        <a class="ml-1 mr-1" href="{{ path('admin_formation_etape_edit', {idFormation : formation.id, idSection : section.id, idEtape : etape.id}) }}"><i class="fa fa-edit"></i> Éditer étape</a>
-                                                                        <a class="ml-1 mr-1" href="{{ path('formation_index') }}" target="_blank"><i class="fas fa-eye"></i> Aperçu</a>
-                                                                        <a class="ml-1 mr-1 text-danger"
-                                                                           href="{{ path('admin_formation_etape_delete', {idFormation : formation.id, idSection : section.id, idEtape : etape.id}) }}"
-                                                                           onclick="return confirm('Êtes-vous sûr de vouloir supprimer cette étape ? Attention : Cela supprimera tout contenu lié à cette étape')">
-                                                                            <i class="fas fa-trash"></i> Supprimer
-                                                                        </a>
-                                                                    </div>
-                                                                </div>
-                                                            </div>
+                                                                </td>
+                                                                <td>
+                                                                    <a class="ml-1 mr-1" href="{{ path('admin_formation_etape_edit', {idFormation : formation.id, idSection : section.id, idEtape : etape.id}) }}"><i class="fa fa-edit"></i> Éditer étape</a>
+                                                                </td>
+                                                                <td>
+                                                                    <a class="ml-1 mr-1" href="{{ path('formation_index') }}" target="_blank"><i class="fas fa-eye"></i> Aperçu</a>
+                                                                </td>
+                                                                <td>
+                                                                    <a class="ml-1 mr-1 text-danger"
+                                                                       href="{{ path('admin_formation_etape_delete', {idFormation : formation.id, idSection : section.id, idEtape : etape.id}) }}"
+                                                                       onclick="return confirm('Êtes-vous sûr de vouloir supprimer cette étape ? Attention : Cela supprimera tout contenu lié à cette étape')">
+                                                                        <i class="fas fa-trash"></i> Supprimer
+                                                                    </a>
+                                                                </td>
+                                                            </tr>
                                                         {% endif %}
                                                     {% endfor %}
+                                                        </tbody>
+                                                    </table>
                                                 {% endif %}
                                             </div>
                                         </div>
@@ -101,4 +117,42 @@
             </div>
         </div>
     </div>
+{% endblock %}
+
+{% block javascripts %}
+    <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
+    <script type="text/javascript">
+        $(document).ready(function () {
+            $('.etape-sortable-table tbody').sortable({
+                update: function (event, ui) {
+                    $(this).children().each(function (index) {
+                        if($(this).attr('data-position') !== (index+1)){
+                            $(this).attr('data-position', (index+1)).addClass('updated')
+                        }
+                    });
+                    saveNewPositions();
+                }
+            });
+        });
+
+        function saveNewPositions(){
+            var positions = [];
+            $('.updated').each(function () {
+                positions.push([$(this).attr('data-index'),$(this).attr('data-position')]);
+                $(this).removeClass('updated');
+            });
+
+            $.ajax({
+                url: "{{ path('admin_formation_etape_update_position') }}",
+                method: "POST",
+                data: {
+                    update: 1,
+                    positions: positions
+                },
+                success: function (response) {
+                    console.log(response);
+                }
+            });
+        }
+    </script>
 {% endblock %}
