--- a/templates/notif/index.html.twig
+++ b/templates/notif/index.html.twig
@@ -34,7 +34,7 @@
                         {% endif %}
 
                         {% if notif.type=="admin" %}
-                            <strong>Le Trading à posté un nouveau message</strong>
+                            <strong>Le Trading a posté un nouveau message</strong>
                         {% else %}
                             <span class="text-capitalize font-weight-bold">{{ notif.sender.pseudo }}<span/> a
                             {% if notif.type=="comment" %}
