--- a/templates/partials/request/unreadMessages.html.twig
+++ b/templates/partials/request/unreadMessages.html.twig
@@ -9,7 +9,7 @@
         <div class="notifMsg"></div>
     </a>
 </div>
-{# @TODO : update le nbr de msg non lus #}
+{# @TODO : update le nbr de msg non lus comme notifs #}
 {% block javascripts %}
     <script>
         $(document).ready(function () {
