Ajout systeme de segmentation upload images + correctif position etape

--- a/templates/account/index.html.twig
+++ b/templates/account/index.html.twig
@@ -11,7 +11,7 @@
                 {% if user.media %}
 
                     <img class="avatar mb-3"
-                         src="{{ vich_uploader_asset(user.media, 'imageFile', 'App\\Entity\\Media') }}"
+                         src="{{ vich_uploader_asset(user.media, 'avatarFile', 'App\\Entity\\Media') }}"
                          alt="Avatar de {{ user.fullName }}">
                 {% else %}
                     <img class="avatar mb-3"
