--- a/templates/notif/index.html.twig
+++ b/templates/notif/index.html.twig
@@ -13,7 +13,7 @@
                         <h5 class="mb-1 text-capitalize">
                             {% if notif.sender.media %}
                                 <img class="avatar-medium rounded-circle"
-                                     src="{{ vich_uploader_asset(notif.sender.media, 'imageFile', 'App\\Entity\\Media') }}"
+                                     src="{{ vich_uploader_asset(notif.sender.media, 'avatarFile', 'App\\Entity\\Media') }}"
                                      alt="Avatar de {{ notif.sender.fullName }}">
                             {% else %}
                                 <img class="avatar-medium rounded-circle"
